Changed name of settings

--- a/settings.html
+++ b/settings.html
@@ -75,7 +75,7 @@
                 <div class="setting">
                     <ul>
                         <li>
-                            <p>Accent color</p>
+                            <p>Theme</p>
                             <div>
                                 <input type="radio" id="purple" name="accent-color" value="113, 10, 151" checked>
                                 <label for="purple" class="purple button">Purple</label>
