--- a/sv/settings.html
+++ b/sv/settings.html
@@ -76,7 +76,7 @@
                 <div class="setting">
                     <ul>
                         <li>
-                            <p>Färg</p>
+                            <p>Tema</p>
                             <div>
                                 <input type="radio" id="purple" name="accent-color" value="113, 10, 151" checked>
                                 <label for="purple" class="purple button">Lila</label>
