Finished Swedish contact page

--- a/sv/index.html
+++ b/sv/index.html
@@ -20,29 +20,32 @@
 <body class="boxAlignment gradientBackgroundAnimation">
     <header>
         <nav>
-            <div class="langWrapper">
-                <div class="dropdown">
-                    <button onclick="toggleLangDrop()" class="dropButton lang" id="dropButtonID">🌐 Språk (Language)</button>
-                    <div id="langDrop" class="dropdownContent">
-                        <a href="index.html">🇸🇪 Svenska</a>
-                        <a href="../index.html">🇺🇸/🇬🇧 English (Engelska)</a>
-                    </div>
-                </div>
-            </div>
             <div class="navWrapper">
-                <a class="navButton activeChoice" href="index.html">🏠 Hem</a>
-                <a class="navButton" href="socialmedia.html">💬 Sociala medier</a>
-                <a class="navButton" href="experiences.html">🧠 Erfarenhet</a>
-                <a class="navButton" href="projects.html">🛠️ Projekt</a>
+                <a class="navButton activeChoice" href="index.html"><img draggable="false" class="emoji" alt=""
+                        src="../src/images/emojis/house.svg"> Hem</a>
+                <a class="navButton" href="experiences.html"><img draggable="false" class="emoji" alt=""
+                        src="../src/images/emojis/brain.svg"> Erfarenhet</a>
+                <a class="navButton" href="projects.html"><img draggable="false" class="emoji" alt=""
+                        src="../src/images/emojis/tools.svg"> Projekt</a>
+                <a class="navButton" href="contact.html"><img draggable="false" class="emoji" alt=""
+                        src="../src/images/emojis/speak.svg"> Kontakt</a>
+                <a class="navButton" href="settings.html"><img draggable="false" class="emoji" alt=""
+                        src="../src/images/emojis/setttings.svg"> Inställningar</a>
             </div>
             <div class="navWrapperMobile">
-                <button onclick="toggleMenu()" class="navButton" >＝ Meny</button>
+                <button onclick="toggleMenu()" class="navButton">＝ Meny</button>
             </div>
             <div class="mobileMenu" id="mobileMenuID">
-                <a class="navButton activeChoice" href="index.html">🏠 Hem</a>
-                <a class="navButton" href="socialmedia.html">💬 Sociala medier</a>
-                <a class="navButton" href="experiences.html">🧠 Erfarenhet</a>
-                <a class="navButton" href="projects.html">🛠️ Projekt</a>
+                <a class="navButton activeChoice" href="index.html"><img draggable="false" class="emoji" alt=""
+                        src="../src/images/emojis/house.svg"> Hem</a>
+                <a class="navButton" href="experiences.html"><img draggable="false" class="emoji" alt=""
+                        src="../src/images/emojis/brain.svg"> Erfarenhet</a>
+                <a class="navButton" href="projects.html"><img draggable="false" class="emoji" alt=""
+                        src="../src/images/emojis/tools.svg"> Projekt</a>
+                <a class="navButton" href="contact.html"><img draggable="false" class="emoji" alt=""
+                        src="../src/images/emojis/speak.svg"> Kontakt</a>
+                <a class="navButton" href="settings.html"><img draggable="false" class="emoji" alt=""
+                        src="../src/images/emojis/setttings.svg"> Inställningar</a>
             </div>
         </nav>
     </header>
