--- a/sv/projects.html
+++ b/sv/projects.html
@@ -23,19 +23,6 @@
 <body class="boxAlignment gradientBackgroundAnimation">
     <header>
         <nav>
-            <div class="langWrapper">
-                <div class="dropdown">
-                    <button onclick="toggleLangDrop()" class="dropButton lang" id="dropButtonID"><img draggable="false"
-                            class="emoji" alt="" src="../src/images/emojis/globe.svg"> Språk (Language)</button>
-                    <div id="langDrop" class="dropdownContent">
-                        <a href="../projects.html"><img draggable="false" class="emoji" alt=""
-                                src="../src/images/emojis/usa.svg">/<img draggable="false" class="emoji" alt=""
-                                src="../src/images/emojis/uk.svg"> English (Engelska)</a>
-                        <a href="projects.html"><img draggable="false" class="emoji" alt=""
-                                src="../src/images/emojis/sweden.svg"> Svenska</a>
-                    </div>
-                </div>
-            </div>
             <div class="navWrapper">
                 <a class="navButton" href="index.html"><img draggable="false" class="emoji" alt=""
                         src="../src/images/emojis/house.svg"> Hem</a>
@@ -45,9 +32,11 @@
                         src="../src/images/emojis/tools.svg"> Projekt</a>
                 <a class="navButton" href="contact.html"><img draggable="false" class="emoji" alt=""
                         src="../src/images/emojis/speak.svg"> Kontakt</a>
+                <a class="navButton" href="settings.html"><img draggable="false" class="emoji" alt=""
+                        src="../src/images/emojis/setttings.svg"> Inställningar</a>
             </div>
             <div class="navWrapperMobile">
-                <button onclick="toggleMenu()" class="navButton">＝ Menu</button>
+                <button onclick="toggleMenu()" class="navButton">＝ Meny</button>
             </div>
             <div class="mobileMenu" id="mobileMenuID">
                 <a class="navButton" href="index.html"><img draggable="false" class="emoji" alt=""
@@ -58,6 +47,8 @@
                         src="../src/images/emojis/tools.svg"> Projekt</a>
                 <a class="navButton" href="contact.html"><img draggable="false" class="emoji" alt=""
                         src="../src/images/emojis/speak.svg"> Kontakt</a>
+                <a class="navButton" href="settings.html"><img draggable="false" class="emoji" alt=""
+                        src="../src/images/emojis/setttings.svg"> Inställningar</a>
             </div>
         </nav>
     </header>
