Renaming Save settings to Apply

--- a/settings.html
+++ b/settings.html
@@ -132,7 +132,7 @@
                     </div>
                 </div>
                 <div class="bottomButton">
-                    <button class="saveButton" type="submit">Save settings</button>
+                    <button class="saveButton" type="submit">Apply</button>
                 </div>
             </div>
         </form>
