--- a/sv/settings.html
+++ b/sv/settings.html
@@ -132,7 +132,7 @@
                     </div>
                 </div>
                 <div class="bottomButton">
-                    <button class="saveButton" type="submit">Spara inställningar</button>
+                    <button class="saveButton" type="submit">Verkställ</button>
                 </div>
             </div>
         </form>
