Removed .html extensions

--- a/experiences.html
+++ b/experiences.html
@@ -26,30 +26,30 @@
     <header>
         <nav>
             <div class="navWrapper">
-                <a class="navButton" href="index.html"><img draggable="false" class="emoji" alt=""
+                <a class="navButton" href="index"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/house.svg"> Home</a>
-                <a class="navButton activeChoice" href="experiences.html"><img draggable="false" class="emoji" alt=""
+                <a class="navButton activeChoice" href="experiences"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/brain.svg"> Experiences</a>
-                <a class="navButton" href="projects.html"><img draggable="false" class="emoji" alt=""
+                <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/tools.svg"> Projects</a>
-                <a class="navButton" href="contact.html"><img draggable="false" class="emoji" alt=""
+                <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/speak.svg"> Contact</a>
-                <a class="navButton" href="settings.html"><img draggable="false" class="emoji" alt=""
+                <a class="navButton" href="settings"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/setttings.svg"> Settings</a>
             </div>
             <div class="navWrapperMobile">
                 <button onclick="toggleMenu()" class="navButton">＝ Menu</button>
             </div>
             <div class="mobileMenu" id="mobileMenuID">
-                <a class="navButton" href="index.html"><img draggable="false" class="emoji" alt=""
+                <a class="navButton" href="index"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/house.svg"> Home</a>
-                <a class="navButton activeChoice" href="experiences.html"><img draggable="false" class="emoji" alt=""
+                <a class="navButton activeChoice" href="experiences"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/brain.svg"> Experiences</a>
-                <a class="navButton" href="projects.html"><img draggable="false" class="emoji" alt=""
+                <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/tools.svg"> Projects</a>
-                <a class="navButton" href="contact.html"><img draggable="false" class="emoji" alt=""
+                <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/speak.svg"> Contact</a>
-                <a class="navButton" href="settings.html"><img draggable="false" class="emoji" alt=""
+                <a class="navButton" href="settings"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/setttings.svg"> Settings</a>
             </div>
         </nav>
@@ -67,7 +67,7 @@
                             knowledge.</p>
                         <div class="centerer">
                             <div class="centererItems">
-                                <a href="cv.html" class="cvButton">Request CV/resume</a>
+                                <a href="cv" class="cvButton">Request CV/resume</a>
                                 <a class="socialMedia linkedin"
                                     href="https://www.linkedin.com/in/adnan-bukvic-b220b1277/" target="_blank">LinkedIn</a>
                             </div>
