--- a/projects.html
+++ b/projects.html
@@ -25,30 +25,30 @@
     <header>
         <nav>
             <div class="navWrapper">
-                <a class="navButton" href="index.html"><img draggable="false" class="emoji" alt=""
+                <a class="navButton" href="index"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/house.svg"> Home</a>
-                <a class="navButton" href="experiences.html"><img draggable="false" class="emoji" alt=""
+                <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/brain.svg"> Experiences</a>
-                <a class="navButton activeChoice" href="projects.html"><img draggable="false" class="emoji" alt=""
+                <a class="navButton activeChoice" href="projects"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/tools.svg"> Projects</a>
-                <a class="navButton" href="contact.html"><img draggable="false" class="emoji" alt=""
+                <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/speak.svg"> Contact</a>
-                <a class="navButton" href="settings.html"><img draggable="false" class="emoji" alt=""
+                <a class="navButton" href="settings"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/setttings.svg"> Settings</a>
             </div>
             <div class="navWrapperMobile">
                 <button onclick="toggleMenu()" class="navButton">＝ Menu</button>
             </div>
             <div class="mobileMenu" id="mobileMenuID">
-                <a class="navButton" href="index.html"><img draggable="false" class="emoji" alt=""
+                <a class="navButton" href="index"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/house.svg"> Home</a>
-                <a class="navButton" href="experiences.html"><img draggable="false" class="emoji" alt=""
+                <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/brain.svg"> Experiences</a>
-                <a class="navButton activeChoice" href="projects.html"><img draggable="false" class="emoji" alt=""
+                <a class="navButton activeChoice" href="projects"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/tools.svg"> Projects</a>
-                <a class="navButton" href="contact.html"><img draggable="false" class="emoji" alt=""
+                <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/speak.svg"> Contact</a>
-                <a class="navButton" href="settings.html"><img draggable="false" class="emoji" alt=""
+                <a class="navButton" href="settings"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/setttings.svg"> Settings</a>
             </div>
         </nav>
