--- a/sv/projects.html
+++ b/sv/projects.html
@@ -10,8 +10,10 @@
     <meta name="keywords" content="projects, adnan bukvic, actuallyaridan">
     <meta name="author" content="Adnan Bukvic">
     <link href="../src/styles/styles.css" rel="stylesheet">
+    <script src="../src/scripts/settings.js"></script>
     <script src="../src/scripts/dropDownMenu.js"></script>
     <script src="../src/scripts/mobileMenu.js"></script>
+    <script src="../src/scripts/emailModalBox.js"></script>
     <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="../src/favicons/apple-touch-icon.png">
     <link rel="apple-touch-icon" type="image/png" sizes="32x32" href="../src/favicons/favicon-32x32.png">
     <link rel="apple-touch-icon" type="image/png" sizes="16x16" href="../src/favicons/favicon-16x16.png">
@@ -24,30 +26,30 @@
     <header>
         <nav>
             <div class="navWrapper">
-                <a class="navButton" href="index.html"><img draggable="false" class="emoji" alt=""
+                <a class="navButton" href="index"><img draggable="false" class="emoji" alt=""
                         src="../src/images/emojis/house.svg"> Hem</a>
-                <a class="navButton" href="experiences.html"><img draggable="false" class="emoji" alt=""
+                <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
                         src="../src/images/emojis/brain.svg"> Erfarenhet</a>
-                <a class="navButton activeChoice" href="projects.html"><img draggable="false" class="emoji" alt=""
+                <a class="navButton activeChoice" href="projects"><img draggable="false" class="emoji" alt=""
                         src="../src/images/emojis/tools.svg"> Projekt</a>
-                <a class="navButton" href="contact.html"><img draggable="false" class="emoji" alt=""
+                <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
                         src="../src/images/emojis/speak.svg"> Kontakt</a>
-                <a class="navButton" href="settings.html"><img draggable="false" class="emoji" alt=""
+                <a class="navButton" href="settings"><img draggable="false" class="emoji" alt=""
                         src="../src/images/emojis/setttings.svg"> Inställningar</a>
             </div>
             <div class="navWrapperMobile">
                 <button onclick="toggleMenu()" class="navButton">＝ Meny</button>
             </div>
             <div class="mobileMenu" id="mobileMenuID">
-                <a class="navButton" href="index.html"><img draggable="false" class="emoji" alt=""
+                <a class="navButton" href="index"><img draggable="false" class="emoji" alt=""
                         src="../src/images/emojis/house.svg"> Hem</a>
-                <a class="navButton" href="experiences.html"><img draggable="false" class="emoji" alt=""
+                <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
                         src="../src/images/emojis/brain.svg"> Erfarenhet</a>
-                <a class="navButton activeChoice" href="projects.html"><img draggable="false" class="emoji" alt=""
+                <a class="navButton activeChoice" href="projects"><img draggable="false" class="emoji" alt=""
                         src="../src/images/emojis/tools.svg"> Projekt</a>
-                <a class="navButton" href="contact.html"><img draggable="false" class="emoji" alt=""
+                <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
                         src="../src/images/emojis/speak.svg"> Kontakt</a>
-                <a class="navButton" href="settings.html"><img draggable="false" class="emoji" alt=""
+                <a class="navButton" href="settings"><img draggable="false" class="emoji" alt=""
                         src="../src/images/emojis/setttings.svg"> Inställningar</a>
             </div>
         </nav>
