--- a/sv/settings.html
+++ b/sv/settings.html
@@ -23,30 +23,30 @@
     <header>
         <nav>
             <div class="navWrapper">
-                <a class="navButton" href="index.html"><img draggable="false" class="emoji" alt=""
+                <a class="navButton" href="index"><img draggable="false" class="emoji" alt=""
                         src="../src/images/emojis/house.svg"> Hem</a>
-                <a class="navButton" href="experiences.html"><img draggable="false" class="emoji" alt=""
+                <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
                         src="../src/images/emojis/brain.svg"> Erfarenhet</a>
-                <a class="navButton" href="projects.html"><img draggable="false" class="emoji" alt=""
+                <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
                         src="../src/images/emojis/tools.svg"> Projekt</a>
-                <a class="navButton" href="contact.html"><img draggable="false" class="emoji" alt=""
+                <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
                         src="../src/images/emojis/speak.svg"> Kontakt</a>
-                <a class="navButton activeChoice" href="settings.html"><img draggable="false" class="emoji" alt=""
+                <a class="navButton activeChoice" href="settings"><img draggable="false" class="emoji" alt=""
                         src="../src/images/emojis/setttings.svg"> Inställningar</a>
             </div>
             <div class="navWrapperMobile">
                 <button onclick="toggleMenu()" class="navButton">＝ Meny</button>
             </div>
             <div class="mobileMenu" id="mobileMenuID">
-                <a class="navButton" href="index.html"><img draggable="false" class="emoji" alt=""
+                <a class="navButton" href="index"><img draggable="false" class="emoji" alt=""
                         src="../src/images/emojis/house.svg"> Hem</a>
-                <a class="navButton" href="experiences.html"><img draggable="false" class="emoji" alt=""
+                <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
                         src="../src/images/emojis/brain.svg"> Erfarenhet</a>
-                <a class="navButton" href="projects.html"><img draggable="false" class="emoji" alt=""
+                <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
                         src="../src/images/emojis/tools.svg"> Projekt</a>
-                <a class="navButton" href="contact.html"><img draggable="false" class="emoji" alt=""
+                <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
                         src="../src/images/emojis/speak.svg"> Kontakt</a>
-                <a class="navButton activeChoice" href="settings.html"><img draggable="false" class="emoji" alt=""
+                <a class="navButton activeChoice" href="settings"><img draggable="false" class="emoji" alt=""
                         src="../src/images/emojis/setttings.svg"> Inställningar</a>
             </div>
         </nav>
