Removed index text

--- a/404.html
+++ b/404.html
@@ -20,7 +20,7 @@
     <header>
         <nav>
             <div class="p404Wrapper">
-                <a class="navButton" href="index"><img draggable="false" class="emoji" alt="" src="src/images/emojis/house.svg"> Home</a>
+                <a class="navButton" href="/"><img draggable="false" class="emoji" alt="" src="src/images/emojis/house.svg"> Home</a>
             </div>
         </nav>
     </header>
