--- a/experiences.html
+++ b/experiences.html
@@ -26,7 +26,7 @@
     <header>
         <nav>
             <div class="navWrapper">
-                <a class="navButton" href="index"><img draggable="false" class="emoji" alt=""
+                <a class="navButton" href="/"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/house.svg"> Home</a>
                 <a class="navButton activeChoice" href="experiences"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/brain.svg"> Experiences</a>
@@ -41,7 +41,7 @@
                 <button onclick="toggleMenu()" class="navButton">＝ Menu</button>
             </div>
             <div class="mobileMenu" id="mobileMenuID">
-                <a class="navButton" href="index"><img draggable="false" class="emoji" alt=""
+                <a class="navButton" href="/"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/house.svg"> Home</a>
                 <a class="navButton activeChoice" href="experiences"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/brain.svg"> Experiences</a>
