--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <header>
         <nav>
             <div class="navWrapper">
-                <a class="navButton activeChoice" href="index"><img draggable="false" class="emoji" alt=""
+                <a class="navButton activeChoice" href="/"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/house.svg"> Home</a>
                 <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/brain.svg"> Experiences</a>
@@ -50,7 +50,7 @@
                 <button onclick="toggleMenu()" class="navButton">＝ Menu</button>
             </div>
             <div class="mobileMenu" id="mobileMenuID">
-                <a class="navButton activeChoice" href="index"><img draggable="false" class="emoji" alt=""
+                <a class="navButton activeChoice" href="/"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/house.svg"> Home</a>
                 <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/brain.svg"> Experiences</a>
