--- a/sv/projects.html
+++ b/sv/projects.html
@@ -26,7 +26,7 @@
     <header>
         <nav>
             <div class="navWrapper">
-                <a class="navButton" href="index"><img draggable="false" class="emoji" alt=""
+                <a class="navButton" href="/"><img draggable="false" class="emoji" alt=""
                         src="../src/images/emojis/house.svg"> Hem</a>
                 <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
                         src="../src/images/emojis/brain.svg"> Erfarenhet</a>
@@ -41,7 +41,7 @@
                 <button onclick="toggleMenu()" class="navButton">＝ Meny</button>
             </div>
             <div class="mobileMenu" id="mobileMenuID">
-                <a class="navButton" href="index"><img draggable="false" class="emoji" alt=""
+                <a class="navButton" href="/"><img draggable="false" class="emoji" alt=""
                         src="../src/images/emojis/house.svg"> Hem</a>
                 <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
                         src="../src/images/emojis/brain.svg"> Erfarenhet</a>
