--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
     <header>
         <nav>
             <div class="navWrapper">
-                <a class="navButton" href="index"><img draggable="false" class="emoji" alt=""
+                <a class="navButton" href="/"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/house.svg"> Home</a>
                 <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/brain.svg"> Experiences</a>
@@ -40,7 +40,7 @@
                 <button onclick="toggleMenu()" class="navButton">＝ Menu</button>
             </div>
             <div class="mobileMenu" id="mobileMenuID">
-                <a class="navButton" href="index"><img draggable="false" class="emoji" alt=""
+                <a class="navButton" href="/"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/house.svg"> Home</a>
                 <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/brain.svg"> Experiences</a>
