Fixed Swedish index page

--- a/sv/index.html
+++ b/sv/index.html
@@ -23,7 +23,7 @@
     <header>
         <nav>
             <div class="navWrapper">
-                <a class="navButton activeChoice" href="/"><img draggable="false" class="emoji" alt=""
+                <a class="navButton activeChoice" href="/sv/"><img draggable="false" class="emoji" alt=""
                         src="../src/images/emojis/house.svg"> Hem</a>
                 <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
                         src="../src/images/emojis/brain.svg"> Erfarenhet</a>
@@ -38,7 +38,7 @@
                 <button onclick="toggleMenu()" class="navButton">＝ Meny</button>
             </div>
             <div class="mobileMenu" id="mobileMenuID">
-                <a class="navButton activeChoice" href="/"><img draggable="false" class="emoji" alt=""
+                <a class="navButton activeChoice" href="/sv/"><img draggable="false" class="emoji" alt=""
                         src="../src/images/emojis/house.svg"> Hem</a>
                 <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
                         src="../src/images/emojis/brain.svg"> Erfarenhet</a>
