Testing improved feeds

--- a/projects.html
+++ b/projects.html
@@ -59,7 +59,7 @@
                 <div>
                     <h1>Projects</h1>
                     <div>
-                        <div>
+                        <div id="wrapperProjects">
                             <p class="subTitle">I have a bunch of projects that I work on now and then. <br>Some of them
                                 are technical projects and some others have to do with software and/or websites. <br>Why
                                 don't you check them out? I'm sure you'll like them! I had fun making them at least!
