Revert "finally making new feeds work :DDDD"
This reverts commit 7e585b703d12831e41d41523bef7b198f2ae7356.

--- a/projects.html
+++ b/projects.html
@@ -58,7 +58,7 @@
             <div class="constructionBox">
                 <div>
                     <h1>Projects</h1>
-                    <div id="wrapperWrapperProjects">
+                    <div>
                         <div id="wrapperProjects">
                             <p class="subTitle">I have a bunch of projects that I work on now and then. <br>Some of them
                                 are technical projects and some others have to do with software and/or websites. <br>Why
@@ -67,7 +67,7 @@
                             <div class="project">
                                 <p class="projectName">This website (aridan.net)</p>
                                 <p class="projectDesc">This is a website that has all my social media links, all my
-                                    experiences and similar listed. I learned a lot during this project, mainly how
+                                    experiences and similar listed. <br>I learned a lot during this project, mainly how
                                     to make websites look nice.</p>
                                 <div>
                                     <p class="projectStatus WIP">Work in progress</p>
@@ -85,7 +85,7 @@
                             </div>
                             <div class="project">
                                 <p class="projectName">Swedish translation of OldTwitter</p>
-                                <p class="projectDesc">OldTwitter is a Firefox and Chrome extension to make X (formerly Twitter) look and feel like Twitter from 2015/2018. I actively translate the extension to Swedish, and I believe I'm doing a pretty decent job! You should check it out!</p>
+                                <p class="projectDesc">OldTwitter is a Firefox and Chrome extension to make X (formerly Twitter) look and feel like Twitter from 2015/2018. <br>I actively translate the extension to Swedish, and I believe I'm doing a pretty decent job! You should check it out!</p>
                                 <div>
                                     <p class="projectStatus WIP">Work in progress</p>
                                     <p class="projectLink"><img draggable="false" class="emoji" alt=""
