Changed the label of a setting

--- a/settings.html
+++ b/settings.html
@@ -106,7 +106,7 @@
                             </div>
                         </li>
                         <li>
-                            <p><label for="animations">Show animations</label></p>
+                            <p><label for="animations">Play animations</label></p>
                             <div>
                                 <label class="switch">
                                     <input type="checkbox" id="animations" name="show-animations" value="true" checked>
