--- a/sv/settings.html
+++ b/sv/settings.html
@@ -106,7 +106,7 @@
                             </div>
                         </li>
                         <li>
-                            <p>Visa animationer</p>
+                            <p>Spela animationer</p>
                             <div>
                                 <label class="switch">
                                     <input type="checkbox" id="animations" name="show-animations" value="true" checked>
