--- a/experiences.html
+++ b/experiences.html
@@ -34,7 +34,7 @@
                         src="src/images/emojis/tools.svg"> Projects</a>
                 <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/speak.svg"> Contact</a>
-                <a class="navButton" href="settings"><img draggable="false" class="emoji" alt=""
+                <a class="navButton right-link" href="settings"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/setttings.svg"> Settings</a>
             </div>
             <div class="navWrapperMobile">
