--- a/settings.html
+++ b/settings.html
@@ -31,7 +31,7 @@
                         src="src/images/emojis/tools.svg"> Projects</a>
                 <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/speak.svg"> Contact</a>
-                <a class="navButton activeChoice" href="settings"><img draggable="false" class="emoji" alt=""
+                <a class="navButton activeChoice right-link" href="settings"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/setttings.svg"> Settings</a>
             </div>
             <div class="navWrapperMobile">
