--- a/sv/index.html
+++ b/sv/index.html
@@ -31,7 +31,7 @@
                         src="../src/images/emojis/tools.svg"> Projekt</a>
                 <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
                         src="../src/images/emojis/speak.svg"> Kontakt</a>
-                <a class="navButton" href="settings"><img draggable="false" class="emoji" alt=""
+                <a class="navButton right-link" href="settings"><img draggable="false" class="emoji" alt=""
                         src="../src/images/emojis/setttings.svg"> Inställningar</a>
             </div>
             <div class="navWrapperMobile">
