--- a/sv/settings.html
+++ b/sv/settings.html
@@ -46,7 +46,7 @@
                         src="../src/images/emojis/tools.svg"> Projekt</a>
                 <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
                         src="../src/images/emojis/speak.svg"> Kontakt</a>
-                <a class="navButton activeChoice" href="settings"><img draggable="false" class="emoji" alt=""
+                <a class="navButton activeChoice right-link" href="settings"><img draggable="false" class="emoji" alt=""
                         src="../src/images/emojis/setttings.svg"> Inställningar</a>
             </div>
         </nav>
