--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
     <link rel="manifest" href="src/favicons/site.webmanifest">
 </head>
 
-<body class="boxAlignment gradientBackgroundAnimation">
+<body class="boxAlignment ">
     <header>
         <nav>
             <div class="navWrapper">
