--- a/experiences.html
+++ b/experiences.html
@@ -22,7 +22,7 @@
 
 </head>
 
-<body class="boxAlignment gradientBackgroundAnimation">
+<body class="boxAlignment ">
     <header>
         <nav>
             <div class="navWrapper">
