--- a/settings.html
+++ b/settings.html
@@ -19,7 +19,7 @@
     <link rel="manifest" href="src/favicons/site.webmanifest">
 </head>
 
-<body class="gradientBackgroundAnimation settings">
+<body class="settings">
     <header>
         <nav>
             <div class="navWrapper">
@@ -96,15 +96,6 @@
                 <p>Accessibility</p>
                 <div class="setting">
                     <ul>
-                        <li>
-                            <p><label for="gradients">Show gradients</label></p>
-                            <div>
-                                <label class="switch">
-                                    <input type="checkbox" id="gradients" name="show-gradients" value="true" checked>
-                                    <span class="slider round"></span>
-                                </label>
-                            </div>
-                        </li>
                         <li>
                             <p><label for="animations">Play animations</label></p>
                             <div>
