--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 </head>
 
-<body class="boxAlignment gradientBackgroundAnimation">
+<body class="boxAlignment ">
     <header>
         <nav>
             <div class="navWrapper">
