--- a/sv/settings.html
+++ b/sv/settings.html
@@ -19,7 +19,7 @@
     <link rel="manifest" href="../src/favicons/site.webmanifest">
 </head>
 
-<body class="gradientBackgroundAnimation settings">
+<body class=" settings">
     <header>
         <nav>
             <div class="navWrapper">
