Made the colors more uniform

--- a/sv/index.html
+++ b/sv/index.html
@@ -6,7 +6,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@twemoji/api@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
     <script src="../src/scripts/twimojiFix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#710a97">
+    <meta name="theme-color" content="#161616">
     <title>Hem — actuallyaridan</title>
     <link href="../src/styles/styles.css" rel="stylesheet">
     <script src="../src/scripts/settings.js"></script>
