--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#710a97">
+    <meta name="theme-color" content="#161616">
     <title>Contact — actuallyaridan</title>
     <meta name="description" content="Contact actuallyaridan (Adnan Bukvic) with ease">
     <meta name="keywords" content="contact, adnan bukvic, actuallyaridan">
