--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#710a97">
+    <meta name="theme-color" content="#161616">
     <title>Home — actuallyaridan</title>
     <meta name="description" content="an amazing website made by actuallyaridan (adnan bukvic)">
     <meta name="keywords" content="website, adnan bukvic, actuallyaridan">
