--- a/404.html
+++ b/404.html
@@ -4,23 +4,27 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#14011a">
-    <title>404 — actuallyaridan</title>
-    <link href="src/styles/styles.css" rel="stylesheet">
-    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="src/favicons/apple-touch-icon.png">
+    <meta name="theme-color" content="#161616">
+    <title>404 (Not Found) — actuallyaridan</title>
+    <link href="/src/styles/styles.css" rel="stylesheet">
+    <script src="/src/scripts/settings.js"></script>
+    <script src="/src/scripts/dropDownMenu.js"></script>
+    <script src="/src/scripts/mobileMenu.js"></script>
+    <script src="/src/scripts/emailModalBox.js"></script>
+    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="/src/favicons/apple-touch-icon.png">
     <link rel="apple-touch-icon" type="image/png" sizes="32x32" href="/src/favicons/favicon-32x32.png">
     <link rel="apple-touch-icon" type="image/png" sizes="16x16" href="/src/favicons/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="src/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="src/favicons/favicon-16x16.png">
-    <link rel="manifest" href="src/favicons/site.webmanifest">
+    <link rel="icon" type="image/png" sizes="32x32" href="/src/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/src/favicons/favicon-16x16.png">
+    <link rel="manifest" href="/src/favicons/site.webmanifest">
 
 </head>
 
-<body class="boxAlignment boringBackground">
+<body class="boxAlignment">
     <header>
         <nav>
             <div class="p404Wrapper">
-                <a class="navButton" href="/"><img draggable="false" class="emoji" alt="" src="src/images/emojis/house.svg"> Home</a>
+                <a class="navButton" href="/"><img draggable="false" class="emoji" alt="" src="/src/images/emojis/house.svg"> Home</a>
             </div>
         </nav>
     </header>
