--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
                                     things.<br> I love learning new things and I've liked computers, phones and
                                     networking ever since I was a child.<br> I'm always up-to-date about their software
                                     and hardware. I even like modifying electronics to do new things, like old
-                                    cables<br> and accessories like iPods. I know a bunch of languages, so you can
-                                    really call me Mr Worldwide (but I'd prefer Adnan).</p>
+                                    cables<br> and accessories like iPods and I know a bunch of languages too!</p>
                                 <div class="projectStuff">
                                     <p class="projectStatus"><img draggable="false" class="emoji" alt=""
                                             src="src/images/emojis/clock.svg"><br>19 years old</p>
