--- a/projects.html
+++ b/projects.html
@@ -92,7 +92,7 @@
                                             src="src/images/emojis/link.svg"> <a
                                             href="https://github.com/dimdenGD/OldTwitter/tree/master/_locales/sv" target="_blank">GitHub</a></p>
                                     <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                            src="src/images/emojis/teacher.svg">.json, translation and i8n technology</p>
+                                            src="src/images/emojis/teacher.svg"> i8n technology</p>
                                     <p class="projectLegal"><img draggable="false" class="emoji" alt=""
                                             src="src/images/emojis/judge.svg"> Owned by <a
                                             href="https://dimden.dev" target="_blank">dimden</a></p>
